<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/b_server" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_check"/>
        <Button android:id="@+id/b_client" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_start"/>
        <Button android:id="@+id/b_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_cancel"/>
    </LinearLayout>
	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
		<Button android:id="@+id/b_send" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_send"/>
		<Button android:id="@+id/b_scan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_scan"/>
		<Button android:id="@+id/b_clear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_clear"/>
	</LinearLayout>
	<ListView
		android:id="@+id/log"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stackFromBottom="true"></ListView>
</LinearLayout>